# AI_Safety

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.yaml  environment_ontology.yaml  safety_rules.yaml
data/: dataset_schema.md  instructions.jsonl
docs/: architecture.md  methodology.md
intent_filter/: __init__.py  config.py  dataset.py  decision.py
intent_filter/agents/: __init__.py  client.py  critic.py  parsing.py  planner.py  prompts.py  single_llm.py  translator.py
intent_filter/environment/: __init__.py  actions.py  backend.py  ontology.py  problem.py  rules.py  state.py
intent_filter/evaluation/: __init__.py  metrics.py  plots.py  report.py  runner.py  stats.py  types.py
intent_filter/systems/: __init__.py  baseline_a.py  baseline_b.py  multi_agent_ltl.py  single_llm_ltl.py
intent_filter/verifier/: __init__.py  atoms.py  formula.py  verifier.py
scripts/: run_evaluation.py  run_single_instruction.py
tests/: conftest.py  test_agents.py  test_config.py  test_dataset.py  test_decision.py  test_environment.py  test_evaluation.py  test_systems.py  test_verifier.py
