[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intent_filter"
version = "0.1.0"
description = "LTL-augmented multi-agent intent filtering for LLM-enabled robots (Wits Honours research artifact)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "George Ayensu" }]

# Later phases add: pandas (Phase 7, dataset scaling review tooling).
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "flloat>=0.3.0",
    "anthropic>=0.40.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["intent_filter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
